--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -123,6 +123,10 @@
   box-shadow: 0px 2px 8px -1px #0000001a;
 }
 
+.title {
+  text-transform: capitalize;
+}
+
 .thirteen::before,
 .thirteen::after {
   content: '';
